--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,10 @@ project(SlicerMOOSE)
 set(EXTENSION_HOMEPAGE "https://github.com/mprires/SlicerMOOSE")
 set(EXTENSION_CATEGORY "Segmentation")
 set(EXTENSION_CONTRIBUTORS "Manuel Pires (QIMP Vienna), Sebastian Gutschmayer (QIMP Vienna)")
-set(EXTENSION_DESCRIPTION "The 3DSlicer Extensions for MOOSE: (Multi-organ objective segmentation) is a data-centric AI solution that generates multilabel organ segmentations to facilitate systemic TB whole-person research.")
+set(EXTENSION_DESCRIPTION "The 3DSlicer Extensions for MOOSE: (Multi-organ objective segmentation) is a data-centric AI solution that generates multilabel organ segmentations to facilitate systemic TB whole-person research. The extension, the MOOSE package, and segmentation models are distributed under the GPL license.")
 set(EXTENSION_ICONURL "https://github.com/mprires/SlicerMOOSE/raw/main/MOOSE/Resources/Icons/MOOSE.png")
 set(EXTENSION_SCREENSHOTURLS "https://github.com/mprires/SlicerMOOSE/raw/main/Images/MOOSE.gif")
-set(EXTENSION_DEPENDS "NA") # Specified as a list or "NA" if no dependencies
+set(EXTENSION_DEPENDS "PyTorch") # Specified as a list or "NA" if no dependencies
 
 #-----------------------------------------------------------------------------
 # Extension dependencies
