Updates according to 3DSlicer review (12/14)
[10/11/12] Updated the "Using the Extension" section
[6] Screenshot file added and CMakeLists.txt updated
[13] a clean exit is now implemented if no segmentation is returned. The User is informed via error pop in

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(EXTENSION_CATEGORY "Segmentation")
 set(EXTENSION_CONTRIBUTORS "Manuel Pires (QIMP Vienna), Sebastian Gutschmayer (QIMP Vienna)")
 set(EXTENSION_DESCRIPTION "The 3DSlicer Extensions for MOOSE: (Multi-organ objective segmentation) is a data-centric AI solution that generates multilabel organ segmentations to facilitate systemic TB whole-person research. The extension, the MOOSE package, and segmentation models are distributed under the GPL license.")
 set(EXTENSION_ICONURL "https://github.com/mprires/SlicerMOOSE/raw/main/MOOSE/Resources/Icons/MOOSE.png")
-set(EXTENSION_SCREENSHOTURLS "https://github.com/mprires/SlicerMOOSE/raw/main/Images/MOOSE.gif")
+set(EXTENSION_SCREENSHOTURLS "https://github.com/mprires/SlicerMOOSE/raw/main/Images/SlicerMOOSE_Screenshot1.png")
 set(EXTENSION_DEPENDS "PyTorch") # Specified as a list or "NA" if no dependencies
 
 #-----------------------------------------------------------------------------
